--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.facebook.login.widget.ProfilePictureView
+    <!--<com.facebook.login.widget.ProfilePictureView
         android:id="@+id/picture"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:layout_width="200sp"
-        android:layout_height="200sp"/>
+        android:layout_height="200sp"/>-->
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
@@ -19,7 +19,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp" />
-    <Button
+    <!--<Button
         android:id="@+id/details"
         android:text="Show details"
         android:layout_gravity="center"
@@ -31,5 +31,5 @@
         android:text="Share"
         android:layout_gravity="center"
         android:layout_width="200sp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 </LinearLayout>
